# bure

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CPPLINT.cfg  Config.cpp  Config.h  Error.cpp  Graficos.cpp  Graficos.h  Interface.cpp  Interface.h  Juego.cpp  Juego.h  Jugador.cpp  Jugador.h  Makefile  Mapa.cpp  Mapa.h  Network.cpp  Network.h  TODO  build.sh  config.cpp  config.h  error.cpp  error.h  event_manager.cpp  event_manager.h  example_game.cpp  example_game.h  game.cpp  game.h  game_map.cpp  game_map.h  graphics.cpp  graphics.h  hud_renderer.cpp  hud_renderer.h  main.cpp  (+10 more)
GUI/: Boton.h  Container.cpp  Container.h  Imagen.h  InputBox.cpp  InputBox.h  Label.cpp  Label.h  Selector.cpp  Selector.h  Widget.h  button.h  container.cpp  container.h  image.h  input_box.cpp  input_box.h  label.cpp  label.h  ui_selector.cpp  ui_selector.h  widget.h
cmake/: FindGlibmm.cmake  FindLibXMLPP.cmake  FindSDL2.cmake  FindSDL2_image.cmake  FindSDL2_net.cmake
components/: movement_component.cpp  movement_component.h  stats_component.cpp  stats_component.h
data/: config.xml
engine/: engine.cpp  engine.h  entity.h  entity_renderer.cpp  entity_renderer.h  event_manager.cpp  event_manager.h  game.cpp  game.h  game_map.cpp  game_map.h  game_map_renderer.cpp  game_map_renderer.h  graphics.cpp  graphics.h  graphics2.cpp  graphics2.h  renderer.cpp  renderer.h  sprite_manager.cpp  sprite_manager.h  system.h  types.cpp  types.h  ui_manager.cpp  ui_manager.h
engine/components/: animation_component.cpp  animation_component.h  animation_fsm_component.h  component.h  map_position_component.cpp  map_position_component.h  position_component.cpp  position_component.h  script_component.h  solid_component.cpp  solid_component.h  sprite_component.cpp  sprite_component.h
engine/entities/: entity.cpp  entity.h
engine/events/: event.h  event_close.h  event_keyboard.h  keyboard_event.h
engine/systems/: drawing_system.cpp  drawing_system.h  scripts_system.cpp  scripts_system.h  system.h
engine/test/: CTestTestfile.cmake  Makefile  cmake_install.cmake  ui_leak.cpp
engine/test/lib/googletest-1.8.0/googletest/: CMakeLists.txt  Makefile  cmake_install.cmake
engine/test/lib/googletest-1.8.0/googletest/cmake/: internal_utils.cmake
engine/test/lib/googletest-1.8.0/googletest/docs/: FAQ.md  V1_5_FAQ.md  V1_6_FAQ.md  V1_7_FAQ.md
engine/test/lib/googletest-1.8.0/googletest/test/: gtest_output_test_.cc
engine/ui/: button.cpp  button.h  container.cpp  container.h  image.h  input_box.cpp  input_box.h  label.cpp  label.h  selector.cpp  selector.h  ui_manager.cpp  ui_manager.h  ui_renderer.cpp  ui_renderer.h  widget.cpp  widget.h
engine/utils/: config.cpp  config.h  error.cpp  error.h  logger.cpp  logger.h  pathfinding.cpp  pathfinding.h  tiled_map_reader.cpp  tiled_map_reader.h
entities/: background_entity.cpp  background_entity.h  character_entity.cpp  character_entity.h  enemy_entity.cpp  enemy_entity.h  fire_entity.cpp  fire_entity.h  player_entity.cpp  player_entity.h
maps/: campo.tmx  pueblo.tmx
resources/: bure.xpm
resources/maps/: campo.tmx  generator_config.xml  pueblo.tmx
scripts/: character_script_component.cpp  character_script_component.h  enemy_script_component.cpp  enemy_script_component.h
systems/: movement_system.cpp  movement_system.h
test/: CMakeLists.txt  map_generator_test.cpp  ui_leak.cpp
ui/: CMakeLists.txt  button.cpp  button.h  container.cpp  container.h  image.h  input_box.cpp  input_box.h  label.cpp  label.h  selector.cpp  selector.h  ui_manager.cpp  ui_manager.h  ui_renderer.cpp  ui_renderer.h  widget.cpp  widget.h
ui/scripts/: container_script.cpp
utils/: map_generator.cpp  map_generator.h
